cambios lunes 6 octubre

--- a/login/templates/home.html
+++ b/login/templates/home.html
@@ -993,7 +993,7 @@
                             </a>
                             <div class="module-status">
                                 <div class="status-dot"></div>
-                                <span>Activo</span>
+                                <span>Activo</span
                             </div>
                         </div>
                     </div>
